tests/test138.rael
log { 1, 2, 66, 234, 11, 75, 2 }at(3 to 1)